--- a/style.css
+++ b/style.css
@@ -294,6 +294,14 @@ input[type=submit]:hover {
 }
 
 
+.about {
+  background: url(contact-background.png);
+  background-size: contain;
+  height: 100vh;
+  width: 100%;
+  background-repeat: no-repeat;
+}
+
 .bold {
   font-weight: 900;
 }
@@ -322,6 +330,11 @@ p {
 
 a:link, a:visited {
   text-decoration: none;
+  color: black;
+}
+
+a:hover {
+  color: #DEB8B8;
 }
 
 .button {
