--- a/style.css
+++ b/style.css
@@ -19,12 +19,10 @@ nav {
 
 .little-logo {
   max-height: 60px;
-  /*padding: 10px 0px 0px 20px;*/
 }
 
 nav ul {
   display: inline;
-  /*float: right;*/
   margin: 20px;
   padding-top: 10px;
 }
@@ -37,18 +35,16 @@ nav li {
   width: 100px;
 }
 
-.nav-left {
-  width: 45%;
-  display: block;
+.nav-left { 
   text-align: right;
-  padding-top: 30px;
+  width: 45%; 
+  padding-top: 2%;
 }
 
 .nav-right {
-  width: 45%;
-  display: block;
   text-align: left;
-  padding-top: 30px;
+  width: 45%;
+  padding-top: 2%;
 }
 
 .nav-center {
@@ -57,8 +53,17 @@ nav li {
   padding-top: 10px;
 }
 
+#current {
+  color: #DEB8B8;
+}
+
+#current:hover {
+  color: #c78585;
+}
+
 
 /*header*/
+
 
 header {
   height: 425px;
@@ -79,17 +84,17 @@ header img {
   background: rgba(242, 242, 242, 0.5);
 }
 
-header .text {
+.header-img {
   position: absolute;
   width: 90%;
   height: 90%;
-  padding: 5% 0% 0% 10%;
+  padding: 10% 0% 0% 10%;
   text-align: left;
 }
 
 header a {
   margin-left: 20%;
-  margin-top: 15%;
+  margin-top: 20%;
   /*display: block;*/
 }
 
@@ -101,6 +106,7 @@ header a {
   text-align: center;
   padding: 5% 0%;
 }
+
 .intro h3 {
   color: #c78585;
 }
@@ -334,7 +340,7 @@ a:link, a:visited {
 }
 
 a:hover {
-  color: #DEB8B8;
+  color: #c78585;
 }
 
 .button {
