--- a/style.css
+++ b/style.css
@@ -1,347 +1,5 @@
-html {
-  font-family: 'Playfair Display', serif;
-}
 
-/*navigation*/
 
-nav {
-  width: 100%;
-  height: 80px;
-  font-family: 'Open Sans Condensed', sans-serif;
-  position: fixed; 
-  z-index: 1;
-  top: 0; 
-  left: 0;
-  background: rgba(246, 247, 249, 0.9);
-  text-align: center;
-  text-decoration: none;
-}
-
-.little-logo {
-  max-height: 60px;
-}
-
-nav ul {
-  display: inline;
-  margin: 20px;
-  padding-top: 10px;
-}
-
-nav li {
-  display: inline;
-  text-transform: uppercase;
-  padding: 0px 10px;
-  font-size: 22px;
-  width: 100px;
-}
-
-.nav-left { 
-  text-align: right;
-  width: 45%; 
-  padding-top: 2%;
-}
-
-.nav-right {
-  text-align: left;
-  width: 45%;
-  padding-top: 2%;
-}
-
-.nav-center {
-  width: 10%;
-  display: inline-block;
-  padding-top: 10px;
-}
-
-#current {
-  color: #DEB8B8;
-}
-
-#current:hover {
-  color: #c78585;
-}
-
-
-/*header*/
-
-
-header {
-  height: 425px;
-  position: relative;
-  display: block;
-  background: url(weightloss.png);
-  background-size: cover;
-  margin-top: 80px;
-}
-
-header img {
-  max-width: 400px;
-}
-
-.header-background {
-  height: 100%;
-  display: block;
-  background: rgba(242, 242, 242, 0.5);
-}
-
-.header-img {
-  position: absolute;
-  width: 90%;
-  height: 90%;
-  padding: 10% 0% 0% 10%;
-  text-align: left;
-}
-
-header a {
-  margin-left: 20%;
-  margin-top: 20%;
-  /*display: block;*/
-}
-
-
-/*introduction*/
-
-
-.intro {
-  text-align: center;
-  padding: 5% 0%;
-}
-
-.intro h3 {
-  color: #c78585;
-}
-
-.intro-div {
-  width: 180px;
-  border-top: solid #c78585 5px;
-  margin: 10px auto;
-}
-
-.intro p {
-  width: 70%;
-  line-height: 26px;
-  margin: auto;
-  padding-top: 5%;
-  font-size: 18px;
-}
-
-
-/*images container*/
-
-
-.images article {
-  height: 200px;
-}
-
-.workout-img {
-  background: url(yogamat.png);
-  background-size: cover;
-}
-
-.food-img {
-  background: url(food.png);
-  background-size: cover;
-}
-
-.bikini-img {
-  background: url(bikini.png);
-  background-size: cover;
-}
-
-.images h3 {
-  font-size: 22px;
-  font-family: 'Open Sans Condensed', sans-serif;
-  text-transform: uppercase;
-  padding-top: 5%;
-}
-
-.images p {
-  width: 80%;
-  margin: auto;
-  font-size: 16px;
-  padding-top: 5%;
-  line-height: 20px;
-}
-
-
-/*featured*/
-
-
-.featured img {
-  max-width: 100%;
-}
-
-.featured h2 {
-  padding-top: 5%;
-  text-align: center;
-}
-
-.featured section {
-  background: #F6F7F9;
-  height: 100%;
-}
-
-.featured article {
-  background: #F6F7F9;
-  margin: 5% 0%;
-}
-
-.featured h3 {
-  font-size: 28px;
-}
-
-.featured p {
-  width: 80%;
-  padding: 10% 0%;
-  line-height: 20px;
-}
-
-
-/*container*/
-
-
-.fruit-container {
-  height: 300px;
-  display: block;
-  /*position: relative;
-  background: url(fruit.jpg);
-  background-size: cover;*/
-}
-
-.fruit_container img {
-  max-height: 100%;
-  opacity: 0.5;
-}
-
-
-/*products*/
-
-
-.products {
-  margin-top: 80px;
-  padding-top: 5%;
-}
-
-.products div {
-  padding-bottom: 3%;
-}
-
-.products h3 {
-  font-family: 'Open Sans Condensed', sans-serif;
-  font-size: 24px;
-}
-
-.price {
-  font-weight: bolder;
-  display: inline-block;
-  margin-top: 10px;
-}
-
-.products p {
-  margin: 15px 0px;
-
-}
-.products img {
-  max-width: 80%;
-}
-
-.products section {
-  background: #F6F7F9;
-  height: 100%;
-  text-align: center;
-}
-
-.products article {
-  background: #F6F7F9;
-  margin-bottom: 5%;
-}
-
-.products .fas, .products .far {
-  color: #f2c40d;
-}
-
-.products a {
-  margin-bottom: 50px;
-}
-/*.products p {
-  width: 80%;
-  padding: 10% 0%;
-  line-height: 20px;
-}*/
-
-
-/*contact*/
-
-
-input[type=text], select, textarea {
-    width: 100%; 
-    padding: 12px;   
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box; 
-    margin-top: 6px; 
-    margin-bottom: 16px;
-    resize: vertical
-}
-
-
-input[type=submit]:hover {
-    background-color: #45a049;
-}
-
-
-.contact {
-    border-radius: 5px;
-    background-color: #f2f2f2;
-    padding: 20px;
-    padding-top: 120px;
-    margin: auto;
-    width: 80%;
-}
-
-
-.about {
-  background: url(contact-background.png);
-  background-size: contain;
-  height: 100vh;
-  width: 100%;
-  background-repeat: no-repeat;
-}
-
-.bold {
-  font-weight: 900;
-}
-
-h1 {
-  font-size: 60px;
-  text-transform: uppercase;
-  font-family: 'Fjalla One', sans-serif;
-}
-
-h2 {
-  font-size: 30px;
-  text-transform: uppercase;
-  font-family: 'Fjalla One', sans-serif;
-}
-
-h3 {
-  font-size: 20px;
-  font-family: 'Open Sans Condensed', sans-serif;
-  text-transform: uppercase;
-}
-
-p {
-  font-family: 'Open Sans Condensed', sans-serif;
-}
-
-a:link, a:visited {
-  text-decoration: none;
-  color: black;
-}
-
-a:hover {
-  color: #c78585;
-}
 
 .button {
   font-size: 20px;
@@ -353,52 +11,15 @@ a:hover {
   font-weight: 700;
 }
 
-.container:after {
-  content: "";
-  display: table; 
-  clear: both; 
+.button:hover {
+  background: #c78585;
+  color: black;
 }
 
-.three {
-  width: 33%;
-  float: left;
-  text-align: center;
-  padding: 5% 0%;
-}
-
-section {
-  display: block;
-}
-
-.small {
-  width: 80%;
-  margin: auto;
-}
-
-.two {
-  width: 50%;
-}
-
-.two-small {
-  width: 30%;
-  text-align: center;
-}
-
-.two-big {
-  width: 70%;
-}
-
-.left {
-  float: left;
-}
-
-.right {
-  float: right;
-}
-
-
-.shop {
-  background: #43c0f6;
+.pink-line {
+  width: 180px;
+  border-top: solid #c78585 5px;
+  margin: 10px auto;
 }
 
 .light-grey {
@@ -424,6 +45,7 @@ section {
 .white {
   background: #F6F7F9;
 }
+/*
 .product-image {
   height: 300px;
   max-width: 300px;
@@ -431,10 +53,7 @@ section {
   display: inline-block;
 }
 
-.product-description {
-  width: 80%;
-  padding: 10%;
-}
+
 
 #image_container {
   width: 80%;
@@ -457,4 +76,4 @@ canvas {
 
 .bus-image {
   margin-top: 20px;
-}
+}*/
