--- a/modules.css
+++ b/modules.css
@@ -234,13 +234,12 @@ header a {
 
 
 
-/*products*/
+/*shopping page*/
 
 
 
-.products {
-  margin-top: 80px;
-  padding-top: 5%;
+.products h2 {
+  padding-top: 15%;
 }
 
 .products div {
@@ -252,6 +251,17 @@ header a {
   font-size: 24px;
 }
 
+.product-container {
+  width: 90%;
+  border: solid #e6e6e6 2px;
+  border-radius: 10px;
+  margin: 10% auto;
+}
+
+.product-container img {
+  max-height: 410px;
+  padding: 10% 0%;
+}
 .price {
   font-weight: bolder;
   display: inline-block;
@@ -262,9 +272,10 @@ header a {
   margin: 15px 0px;
 
 }
-.products img {
+
+/*.products img {
   max-width: 80%;
-}
+}*/
 
 .products section {
   background: #F6F7F9;
@@ -292,6 +303,18 @@ header a {
 
 .shop {
   background: #43c0f6;
+}
+
+
+
+/*about*/
+
+.about {
+  background: url(contact-background.png);
+  background-size: contain;
+  height: 100vh;
+  width: 100%;
+  background-repeat: no-repeat;
 }
 
 
@@ -381,13 +404,4 @@ form a {
 .fab:hover {
   color: #c78585;
 }
-
-.about {
-  background: url(contact-background.png);
-  background-size: contain;
-  height: 100vh;
-  width: 100%;
-  background-repeat: no-repeat;
-}
-
 
